# NovaEM

./: CMakeLists.txt  README.md  main.cpp
MatLab/: AsymmetricLinearArray.m  ObtainRule.m  Scan.m  ShowAntennaFactor.m  SymmetricLinearArray.m  TetCoordConvert.m  VerifyHexBn.m  VerifyQuadBn.m
NovaBasis/: Basis.h  CMakeLists.txt  DivBasisHex.cpp  DivBasisHex.h  DivBasisQuad.cpp  DivBasisQuad.h  DivBasisTet.cpp  DivBasisTet.h  DivBasisTri.cpp  DivBasisTri.h
NovaDef/: CMakeLists.txt  NovaDef.cpp  NovaDef.h
NovaIntegrator/: AdaptiveIntegrator.cpp  AdaptiveIntegrator.h  AdaptiveIntegrator1D.cpp  AdaptiveIntegrator1D.h  AdaptiveIntegrator2D_Quad.cpp  AdaptiveIntegrator2D_Quad.h  AdaptiveIntegrator2D_Tri.cpp  AdaptiveIntegrator2D_Tri.h  AdaptiveIntegrator3D_Hex.cpp  AdaptiveIntegrator3D_Hex.h  AdaptiveIntegrator3D_Tet.cpp  AdaptiveIntegrator3D_Tet.h  CMakeLists.txt  DuffyIntegrator.cpp  DuffyIntegrator.h  DuffyIntegrator2D.cpp  DuffyIntegrator2D.h  DuffyIntegrator2D_Quad.cpp  DuffyIntegrator2D_Quad.h  DuffyIntegrator2D_Tri.cpp  DuffyIntegrator2D_Tri.h  FixedPntIntegrator1D.cpp  FixedPntIntegrator1D.h  FixedPntIntegrator2D_Quad.cpp  FixedPntIntegrator2D_Quad.h  FixedPntIntegrator2D_Tri.cpp  FixedPntIntegrator2D_Tri.h  FixedPntIntegrator3D_Hex.cpp  FixedPntIntegrator3D_Hex.h  FixedPntIntegrator3D_Tet.cpp  FixedPntIntegrator3D_Tet.h  FixedPointIntegrator.cpp  FixedPointIntegrator.h  GaussRule1D.cpp  GaussRule1D.h  GaussRule2D_Tri.cpp  GaussRule2D_Tri.h  GaussRule3D_Tet.cpp  GaussRule3D_Tet.h  Integrand.h  (+4 more)
NovaMesh/: CMakeLists.txt  Element.h  Element2D.cpp  Element2D.h  Element2d.cpp  Element2d.h  Element3D.cpp  Element3D.h  Hex.cpp  Hex.h  Node.h  Patch.h  Patch2D.cpp  Patch2D.h  Patch3D.cpp  Patch3D.h  Quad.cpp  Quad.h  Tet.cpp  Tet.h  Triangle.cpp  Triangle.h
NovaTools/: CMakeLists.txt  RuleGenerator.cpp  RuleGenerator.h  tetAbscissas.txt  tetOffset.txt  tetWeights.txt  triangleAbscissas.txt  triangleOffset.txt  triangleWeights.txt
NovaType/: CMakeLists.txt  NovaComplex.cpp  NovaComplex.h  R3.cpp  R3.h
QuadRuleData/: lineAbscissas.txt  lineOffset.txt  lineWeights.txt  tetOffset.txt  triangleWeights.txt
UnitTest/: CMakeLists.txt  TestBasis.cpp  TestBasis.h  TestComplex.cpp  TestComplex.h  TestIntegrator.cpp  TestIntegrator.h  TestPatch.cpp  TestPatch.h  TestR3.cpp  TestR3.h  UnitTest.cpp
